# HMAR_Location

./: .cproject  .project  .txt2.txt  CMakeLists.txt  HMAR  README.md  README.md~  prob.txt
Data2/kb/: action_obj_label.txt  message.txt  surface.txt  transition_action.txt  transition_action_obj.txt  transition_obj.txt  transition_obj_action.txt
Dataset/: poses.bvh
Location/: loc_data.txt  loc_mov_data.txt
ParsedResult/: recording_01_Chen_001_170418141113.txt  recording_01_Chen_001_170418141717.txt  recording_01_Chen_002_170418135723.txt  recording_01_Chen_003_170418130923.txt  recording_01_Chen_003_170418131001.txt  recording_01_Chen_004_170418130739.txt  recording_01_Chen_004_170418130805.txt  recording_01_Chen_005_170418125955.txt  recording_01_Chen_005_170418130203.txt  recording_01_Chen_005_170418130449.txt  recording_01_Chen_006_170418125603.txt  recording_01_Chen_006_170418125804.txt  recording_01_Chen_007_170418120317.txt  recording_01_Chen_007_170418120738.txt  recording_01_Chen_008_170418115439.txt  recording_01_Chen_008_170418115617.txt  recording_01_Chen_008_170418115749.txt  recording_01_Chen_009_170418114537.txt  recording_01_Chen_009_170418115216.txt  recording_02_Bogdan_001_170419114241.txt  recording_02_Bogdan_001_170419114329.txt  recording_02_Bogdan_001_170419122216.txt  recording_02_Bogdan_002_170419115038.txt  recording_02_Bogdan_002_170419115133.txt  recording_02_Bogdan_002_170419115211.txt  recording_02_Bogdan_003_170419121337.txt  recording_02_Bogdan_003_170419121419.txt  recording_02_Bogdan_004_170419120357.txt  recording_02_Bogdan_004_170419120547.txt  recording_02_Bogdan_004_170419120634.txt  recording_02_Bogdan_005_170419121146.txt  recording_02_Bogdan_005_170419121218.txt  recording_02_Bogdan_005_170419121250.txt  recording_02_Bogdan_006_170419120137.txt  recording_02_Bogdan_006_170419120211.txt  recording_02_Bogdan_007_170419120836.txt  recording_02_Bogdan_007_170419121057.txt  recording_02_Bogdan_008_170419115559.txt  recording_02_Bogdan_008_170419115637.txt  recording_02_Bogdan_008_170419115714.txt  (+42 more)
Scene/: action_label.txt
kb/: action_label.txt  label.txt  message.txt  obj_action_label.txt  surface.txt  surface_.txt  surface_limit.txt  surface_pre0508.txt
matlab/: ConfusionMatrix.eps  ConfusionMatrix.m  ConfusionMatrix_nomove.eps  ConfusionMatrixmoved.eps  Constraintcheck.m  LabelCheck.m  PredictTrajectory.m  RootDirRemoval.m  Window.m  Window_CUP_1.eps  Window_CUP_2.eps  Window_CUP_3.eps  Window_CUP_4.eps  Window_KNF_1.eps  Window_KNF_2.eps  Window_KNF_3.eps  Window_KNF_4.eps  Window_ORG_1.eps  Window_ORG_2.eps  Window_ORG_3.eps  Window_ORG_4.eps  Window_PT1_1.eps  Window_PT1_2.eps  Window_PT2_1.eps  Window_PT2_2.eps  action_label.txt  label.txt  main.m  myread  read.m  readme.txt  run_myread.sh  tmp.m
matlab/0503/: ConfusionMatrix.eps  EdgeProb_CUP_44.eps  EdgeProb_CUP_47.eps  EdgeProb_ORG_45.eps  EdgeProb_ORG_47.eps  EdgeProb_SPG_23.eps  EdgeProb_SPG_24.eps  EdgeProb_SPG_30.eps  EdgeProb_SPG_31.eps  EdgeProb_SPG_37.eps  EdgeProb_SPG_38.eps  EdgeProb_SPG_4.eps  EdgeProb_SPG_5.eps  EdgeProb_SPG_6.eps
matlab/0503_gauss/: GEdgeProb_CUP_44.eps  GEdgeProb_CUP_47.eps  GEdgeProb_ORG_45.eps  GEdgeProb_ORG_47.eps  GEdgeProb_SPG_23.eps  GEdgeProb_SPG_24.eps  GEdgeProb_SPG_30.eps  GEdgeProb_SPG_31.eps  GEdgeProb_SPG_37.eps  GEdgeProb_SPG_38.eps  GEdgeProb_SPG_4.eps  GEdgeProb_SPG_5.eps  GEdgeProb_SPG_6.eps
matlab/0503_nogauss/: ConfusionMatrix.eps  NGEdgeProb_CUP_44.eps  NGEdgeProb_CUP_47.eps  NGEdgeProb_ORG_45.eps  NGEdgeProb_ORG_47.eps  NGEdgeProb_SPG_23.eps  NGEdgeProb_SPG_24.eps  NGEdgeProb_SPG_30.eps  NGEdgeProb_SPG_31.eps  NGEdgeProb_SPG_37.eps  NGEdgeProb_SPG_38.eps  NGEdgeProb_SPG_4.eps  NGEdgeProb_SPG_5.eps  NGEdgeProb_SPG_6.eps
matlab/0505/: GEdgeProb_CUP_44.eps  GEdgeProb_CUP_47.eps  GEdgeProb_ORG_45.eps  GEdgeProb_ORG_47.eps  GEdgeProb_SPG_23.eps  GEdgeProb_SPG_24.eps  GEdgeProb_SPG_30.eps  GEdgeProb_SPG_31.eps  GEdgeProb_SPG_37.eps  GEdgeProb_SPG_38.eps  GEdgeProb_SPG_4.eps  GEdgeProb_SPG_5.eps  GEdgeProb_SPG_6.eps  NGEdgeProb_CUP_35.eps  NGEdgeProb_CUP_42.eps  NGEdgeProb_CUP_44.eps  NGEdgeProb_CUP_47.eps  NGEdgeProb_CUP_6.eps  NGEdgeProb_CUP_8.eps  NGEdgeProb_ORG_45.eps  NGEdgeProb_ORG_47.eps  NGEdgeProb_SPG_23.eps  NGEdgeProb_SPG_24.eps  NGEdgeProb_SPG_30.eps  NGEdgeProb_SPG_31.eps  NGEdgeProb_SPG_37.eps  NGEdgeProb_SPG_38.eps  NGEdgeProb_SPG_4.eps  NGEdgeProb_SPG_5.eps  NGEdgeProb_SPG_6.eps
matlab/0515/: GEdgeProb_CUP_44.eps  GEdgeProb_CUP_47.eps  GEdgeProb_ORG_45.eps  GEdgeProb_ORG_47.eps  GEdgeProb_SPG_23.eps  GEdgeProb_SPG_24.eps  GEdgeProb_SPG_30.eps  GEdgeProb_SPG_31.eps  GEdgeProb_SPG_37.eps  GEdgeProb_SPG_38.eps  GEdgeProb_SPG_4.eps  GEdgeProb_SPG_5.eps  GEdgeProb_SPG_6.eps
matlab/0515b/: GEdgeProbMoved_CUP_44.eps  GEdgeProbMoved_CUP_47.eps  GEdgeProbMoved_ORG_45.eps  GEdgeProbMoved_ORG_47.eps  GEdgeProbMoved_SPG_23.eps  GEdgeProbMoved_SPG_24.eps  GEdgeProbMoved_SPG_30.eps  GEdgeProbMoved_SPG_31.eps  GEdgeProbMoved_SPG_37.eps  GEdgeProbMoved_SPG_38.eps  GEdgeProbMoved_SPG_4.eps  GEdgeProbMoved_SPG_5.eps  GEdgeProbMoved_SPG_6.eps
matlab/ConfusionMatrix/: Result_Moveface.eps  Result_ObjectState.eps  (+1 more)
recording/: Untitled Document
src/: ActionParser.cpp  ActionParser.h  ActionPrediction.cpp  ActionPrediction.h  CAS.cpp  CAS.h  CData.cpp  CData.h  CGraph.cpp  CGraph.h  CKB.cpp  CKB.h  COS.cpp  COS.h  DBSCAN.cpp  DBSCAN.h  DataContainer.cpp  DataContainer.h  DataFilter.cpp  DataFilter.h  DataParser.cpp  DataParser.h  Deployment.cpp  Deployment.h  Evaluate.cpp  Evaluate.h  Filter.cpp  Filter.h  Graph.cpp  Graph.h  Graph_cpp  Graph_h  NBayesClassifier.cpp  NBayesClassifier.h  ObjectPrediction.cpp  ObjectPrediction.h  Parser.cpp  Parser.h  Prediction.cpp  Prediction.h  (+56 more)
src_backup/: Copy of util  Graph.cpp  Graph.h  algo.cpp  algo.h  dataDeclaration.h  dbscan.cpp  dbscan.h  labeling.cpp  labeling.h  labeling_loc.cpp  labeling_loc.h  labeling_sec.cpp  labeling_sec.h  main.cpp  misc.cpp  misc.h  predicting.cpp  predicting.h  prediction.cpp  readWriteFile.cpp  readWriteFile.h  util.cpp  util.h  vtkExtra.cpp  vtkExtra.h
(+1979 files in other folders)
